# Vibode-Engine

./: .gitignore  AGENTS.md  CMakeLists.txt  HardwareRT_Implementation_plan.md  PROJECT_OVERVIEW.md  README.md  comp.spv  editor_preferences.json  rahit.spv  rchit.spv  rgen.spv  rtv_editor.ini  run_game_stability_diagnostics.ps1  run_rtvulkan.bat  run_rtvulkan_debug.bat  run_validation.ps1
.codegraph/: codegraph.db-shm  daemon.pid
Projects/MyProject/: MyProject.rtproject
Projects/MyProject/Scenes/: Main.rtlevel
Samples/CinematicLighting/: CinematicLighting.vproject
Samples/CornellValidation/: CornellValidation.vproject
Samples/CornellValidation/Saved/Autosaves/: Untitled_autosave.rtlevel
Samples/LightweightSponza/: LightweightSponza.vproject
budgets/: balanced_game_16ms.json
docs/: AI_DEBUG_PROFILING_TOOLS_USAGE.md  ARCHITECTURE_OVERVIEW.md  DESCRIPTOR_PIPELINE_SYSTEM.md  EDITOR_LEVEL_EDITOR_IMPLEMENTATION_PLAN.md  EDITOR_LEVEL_EDITOR_IMPLEMENTATION_PLAN[DONE].md  EDITOR_REFERENCE_SCREENSHOT_INSPECTION.md  EDITOR_UI_UX_REFERENCE_MATCH_PLAN.md  IMPLEMENTATION_ROADMAP.md  IMPROVEMENT_PLAN.md  IMPROVEMENT_PLAN_ASSESSMENT.md  INTEGRATED_RENDERER_IMPLEMENTATION_PLAN.md  LEVEL_EDITOR_FEATURE_CHECKLIST.md  MIGRATION_ROADMAP.md  PATH_TRACER_MIGRATION.md  RENDERER_STABILIZATION.md  RESOURCE_SYSTEM.md  SKY_ATMOSPHERE_SYSTEM.md  UX_IMPROVEMENT_PLAN.md
include/rtv/: AccelerationStructure.h  Application.h  AssetBrowserPanel.h  AssetImport.h  AssetManager.h  AssetRegistry.h  AsyncSceneLoader.h  AtmosphereLutSystem.h  AtmosphereModel.h  AtmosphereSamplingSystem.h  BatchUploader.h  BindlessResources.h  Buffer.h  BufferUploader.h  BvhBuilder.h  BvhCollapse.h  CameraBookmark.h  CameraController.h  Check.h  CommandSystem.h  ComputePipeline.h  DebugProfilerPanel.h  DescriptorAllocator.h  DescriptorLayoutCache.h  DescriptorSet.h  DescriptorWriter.h  DiagnosticImageExport.h  DiagnosticTools.h  EditorCommands.h  EditorDockspace.h  EditorLayer.h  EditorLog.h  EditorPanels.h  EditorPreferences.h  EditorSelection.h  EditorTimeline.h  EditorUiStyle.h  Entity.h  EntityId.h  EnvironmentImportanceSampler.h  (+69 more)
scenes/validation/: atmosphere_validation.rtlevel  closeup_cornell.rtlevel  cornell.rtlevel  gltf_extensions_phase42.gltf  gltf_extensions_phase42.rtlevel  lightweight_sponza.rtlevel  manifest.json  material_grid.rtlevel  mis_validation.rtlevel  motion_blur_instances.rtlevel  temporal_stability.rtlevel  transform_stress.rtlevel
scripts/: EditorToolingCommon.psm1  README.md  asset_registry_validator.ps1  capture_editor_reference_scene_states.ps1  capture_editor_screenshot.ps1  capture_editor_ui_states.ps1  command_menu_audit.ps1  content_browser_audit.ps1  editor_plan_audit.ps1  editor_request_flow_report.ps1  editor_screenshot_regression.ps1  editor_smoke.ps1  editor_state_snapshot.ps1  editor_ui_layout_dump.ps1  editor_ui_ux_audit_all.ps1  hierarchy_icon_audit.ps1  imgui_panel_audit.ps1  import_regression_harness.ps1  inspector_coverage_audit.ps1  interaction_parity_audit.ps1  migration_backup_test.ps1  project_fixture_generator.ps1  project_manager_fixture_audit.ps1  render_workflow_audit.ps1  rtlevel_compat_test.ps1  rtlevel_schema_validator.ps1  scene_entity_count_probe.ps1  style_metrics_audit.ps1  timeline_interaction_audit.ps1
shaders/: aerial_perspective_lut.comp  atmosphere_common.glsl  atmosphere_lighting.glsl  atmosphere_lut_sampling.glsl  atmosphere_phase.glsl  blue_noise.glsl  comp.spv  demo_compute.comp  denoiser.comp  environment_sampling.glsl  exposure_reduce.comp  fog_integrate.comp  fullscreen.frag  fullscreen.vert  luminance_histogram.comp  moment_update.comp  multi_scatter_lut.comp  pathtrace.comp  pathtrace.rahit  pathtrace.rchit  pathtrace.rgen  pathtrace.rmiss  pathtrace_shadow.rahit  pathtrace_shadow.rmiss  restir_common.glsl  restir_final.comp  restir_gi_final.comp  restir_gi_spatial.comp  restir_init.comp  restir_ris_init.comp  restir_spatial.comp  restir_temporal.comp  rgen.spv  rt_common.glsl  selection_outline.comp  sky_cdf.comp  sky_debug_views.comp  sky_reproject.comp  sky_view_lut.comp  taa.comp  (+14 more)
src/: main.cpp
src/rtv/: AccelerationStructure.cpp  Application.cpp  AssetBrowserPanel.cpp  AssetImport.cpp  AssetManager.cpp  AssetRegistry.cpp  AsyncSceneLoader.cpp  AtmosphereLutSystem.cpp  AtmosphereModel.cpp  AtmosphereSamplingSystem.cpp  BatchUploader.cpp  BindlessResources.cpp  Buffer.cpp  BufferUploader.cpp  BvhBuilder.cpp  BvhCollapse.cpp  CameraBookmark.cpp  CameraController.cpp  CommandSystem.cpp  ComputePipeline.cpp  DebugProfilerPanel.cpp  DescriptorAllocator.cpp  DescriptorLayoutCache.cpp  DescriptorSet.cpp  DescriptorWriter.cpp  DiagnosticImageExport.cpp  DiagnosticTools.cpp  EditorCommands.cpp  EditorDockspace.cpp  EditorLayer.cpp  EditorLog.cpp  EditorPanels.cpp  EditorPreferences.cpp  EditorSelection.cpp  EditorTimeline.cpp  Entity.cpp  EnvironmentImportanceSampler.cpp  FileDialog.cpp  FrameResources.cpp  GltfLoader.cpp  (+59 more)
